# StarOS

./: .gdbinit  .gitignore  CMakeLists.txt  Makefile  Readme.md  burn2disk.sh  compile_commands.json  create_timestamp_macro.sh  partition_layout.dump  scan_code_1.txt  sorted_scan_codes.txt  standard_log  stdout_comparison.sh
doc/: filesystem.md
root_dir/: large_hello.txt  world.txt
shared/: README.md  system.h
src/: PIC.cpp  alltraps.S  apic.cpp  b32_disk.cpp  b32_filesystem.cpp  b32_print.cpp  b32_string.cpp  b32_utils.cpp  boot.s  bootloader.S  bootloader32.h  bootloader_32.cpp  codegen_interrupt_handlers.py  codegen_interrupt_handlers.sh  codegen_key_table.py  const_variable_where_and_when.md  disk.cpp  flush_tss.S  fs.cpp  host_share.h  interrupt.cpp  interrupt_handlers.S  kernel.c  kernel.cpp  kernel.h  kernel.ld  keyevent_table.cpp  linked_list.h  linker.ld  mbr.S  mbr.ld  memory_management.cpp  paging.cpp  printf.cpp  process.cpp  ps2_keyboard.cpp  schedular.cpp  sleep.cpp  snippet.cpp  stdlib.cpp  (+8 more)
src/tool/: README.md  makefs.cpp
src_libc/: gets.cpp  libc.h  printf.cpp  string_utils.cpp  system_call.cpp  test_system_calls.cpp
src_user/: test_print_a.cpp  test_print_b.cpp  test_syscall_helloworld.cpp  test_syscall_int.cpp  testadd.cpp  userspace.ld
